# client/src/main/resources/swagger.json
@@ -7,12 +7,55 @@
   },
   "basePath" : "/",
   "tags" : [ {
+    "name" : "Connectors"
+  }, {
     "name" : "Flows"
   }, {
     "name" : "Functions"
   } ],
   "schemes" : [ "http" ],
   "paths" : {
+    "/api/v1/connectors" : {
+      "get" : {
+        "tags" : [ "Connectors" ],
+        "summary" : "list",
+        "description" : "",
+        "operationId" : "list",
+        "responses" : {
+          "200" : {
+            "description" : "successful operation",
+            "schema" : {
+              "type" : "array",
+              "items" : {
+                "$ref" : "#/definitions/Connector"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/connectors/{id}" : {
+      "get" : {
+        "tags" : [ "Connectors" ],
+        "summary" : "get",
+        "description" : "",
+        "operationId" : "get",
+        "parameters" : [ {
+          "name" : "id",
+          "in" : "path",
+          "required" : true,
+          "type" : "string"
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "successful operation",
+            "schema" : {
+              "$ref" : "#/definitions/Connector"
+            }
+          }
+        }
+      }
+    },
     "/api/v1/flows" : {
       "get" : {
         "tags" : [ "Flows" ],
@@ -118,6 +161,28 @@
             "description" : "successful operation",
             "schema" : {
               "type" : "string"
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/flows/{id}/deploy" : {
+      "post" : {
+        "tags" : [ "Flows" ],
+        "summary" : "deploy",
+        "description" : "",
+        "operationId" : "deploy",
+        "parameters" : [ {
+          "name" : "id",
+          "in" : "path",
+          "required" : true,
+          "type" : "string"
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "successful operation",
+            "schema" : {
+              "$ref" : "#/definitions/Flow"
             }
           }
         }
@@ -388,11 +453,39 @@
     }
   },
   "definitions" : {
+    "Connector" : {
+      "type" : "object",
+      "properties" : {
+        "id" : {
+          "type" : "integer",
+          "format" : "int64"
+        },
+        "displayName" : {
+          "type" : "string"
+        },
+        "image" : {
+          "type" : "string"
+        },
+        "exposed" : {
+          "type" : "boolean",
+          "default" : false
+        },
+        "port" : {
+          "type" : "integer",
+          "format" : "int32"
+        }
+      }
+    },
     "ConnectorRef" : {
       "allOf" : [ {
         "$ref" : "#/definitions/StepRef"
       }, {
-        "type" : "object"
+        "type" : "object",
+        "properties" : {
+          "connectorId" : {
+            "type" : "string"
+          }
+        }
       } ]
     },
     "CreateFlowRequest" : {
@@ -471,6 +564,9 @@
         },
         "name" : {
           "type" : "string"
+        },
+        "displayName" : {
+          "type" : "string"
         }
       }
     },
@@ -480,6 +576,9 @@
       }, {
         "type" : "object",
         "properties" : {
+          "functionId" : {
+            "type" : "string"
+          },
           "url" : {
             "type" : "string"
           }
